# youtube-dubber

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KOKORO_SETUP.md  LICENSE  README.md  README_PYPI.md  pyproject.toml  setup.bat  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
backend/: dub_video.py  languages.py  live_dub_v6.py  natural_tts.py  requirements.txt  vad.py
backend/youtube_dubber/: __init__.py  cli.py  core.py  languages.py
frontend/: main.js  package-lock.json  package.json  preload.js
frontend/renderer/: app.js  index.html  styles.css
