[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-dubber"
version = "0.1.2"
description = "Dub any YouTube video into Hindi (and 19 other languages) with a casual, engaging neural voice."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
# name-only author populates the classic "Author" metadata field (shows on
# PyPI / stats tools); email kept under maintainers for contact.
authors = [{ name = "Ashutosh" }]
maintainers = [{ name = "Ashutosh", email = "ashutosh.formin@gmail.com" }]
keywords = ["youtube", "dubbing", "translation", "tts", "hindi", "hinglish", "edge-tts", "groq", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "edge-tts>=6.1",
    "groq>=0.11",
]

[project.optional-dependencies]
# yt-dlp is also required at runtime; install it however you prefer
# (pip install youtube-dubber[ytdlp] pulls it in). ffmpeg must be on PATH.
ytdlp = ["yt-dlp"]

[project.urls]
Homepage = "https://github.com/Ashut90/youtube-dubber"
Repository = "https://github.com/Ashut90/youtube-dubber"
Issues = "https://github.com/Ashut90/youtube-dubber/issues"

[project.scripts]
youtube-dubber = "youtube_dubber.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["youtube_dubber*"]
